Modificar clases existentes para localizacion

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,9 +1,11 @@
+0=Installation EDM
 0.steps=1,2,3
+0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi
 0.error.commands=You must provide at least one command argument
 0.error.fail.init=Failure during filter init:
 0.error.dspace.dir=The DSpace installation directory is no defined!!
 0.error.tomcat.base=The Tomcat Base directory is no defined!!
-0.shutdown.hook=MyShutdown hook called"
+0.shutdown.hook=MyShutdown hook called
 0.dspace_dir.option=DSpace installation directory
 0.help.option==Help
 0.terminal.option=Use lanterna library for display
@@ -16,6 +18,18 @@
 1=Beginning step 1: Installing Askosi
 1.ok=Askosi installed ok. Tomcat must be restarted after the end of the installation process.
 1.fail=Failed to complete step 1.
+1.checkPackages.file=File
+1.checkPackages.file.notreadable= file is not readable
+1.checkPackages.file.md5=Md5 file
+1.checkPackages.file.md5.nok=Md5 didn't match in file:
+1.checkPackages.file.ok=File ok
+1.checkPackages.directory.notaccessible= directory is not accessible
+1.installPackages.title=Beginning copy of jar's needed by Askosi
+1.installPackages.jarok=Jar files copied ok
+1.installPackages.db.title=Beginning copy of database driver
+1.installPackages.deploy.title=Beginning deploy of Askosi Web App
+1.installPackages.deploy.plugin.title=Beginning deploy of Askosi Plugin for Jspui
+1.installPackages.datadir.title=Beginning creation of Askosi data directory
 
 2=Beginning step 2: Create Auth Items
 2.fail=Failed to complete step 2.
