--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -15,15 +15,18 @@
 
 0.step.fail=Step not ok.
 
+
 1=Beginning step 1: Installing Askosi
 1.ok=Askosi installed ok. Tomcat must be restarted after the end of the installation process.
 1.fail=Failed to complete step 1.
+
 1.checkPackages.file=File
 1.checkPackages.file.notreadable= file is not readable
 1.checkPackages.file.md5=Md5 file
 1.checkPackages.file.md5.nok=Md5 didn't match in file:
 1.checkPackages.file.ok=File ok
 1.checkPackages.directory.notaccessible= directory is not accessible
+
 1.installPackages.title=Beginning copy of jar's needed by Askosi
 1.installPackages.jarok=Jar files copied ok
 1.installPackages.db.title=Beginning copy of database driver
@@ -31,7 +34,103 @@
 1.installPackages.deploy.plugin.title=Beginning deploy of Askosi Plugin for Jspui
 1.installPackages.datadir.title=Beginning creation of Askosi data directory
 
+1.copyJarsShared.tomcatbasedir.notexist= Tomcat base dir does not exist or is not readable
+1.copyJarsShared.tomcatbaseshareddir.notwritable= Directory is not writable
+1.copyJarsShared.dir.notwritable= Directory does not exist or is not writable
+1.copyJarsShared.dir.copyjars=The jar files needed by Askosi are going to be copied to or give new path:
+1.copyJarsShared.dirnew.copyjars=The jar files needed by Askosi are going to be copied to new path:
+
+1.copyPackageFile.fileexists= File already exists. Do you want to overwrite it (y/[n])?
+1.copyPackageFile.copyfile= Copied to
+1.copyPackageFile.orverwritingfile=Overwriting file
+1.copyDatabaseDrivers.dir.copyjars=The database jar files needed by Askosi are going to be copied to or give new path:
+1.copyDatabaseDrivers.dirnew.copyjars=The database jar files needed by Askosi are going to be copied to new path:
+1.copyDatabaseDrivers.copy.fail=Copy failed
+1.copyDatabaseDrivers.copy.ok=Database Jar files copied ok
+1.copyDatabaseDrivers.dir.nojar= Directory doesn't have any jdbc driver
+1.copyDatabaseDrivers.dir.noread= Directory doesn't exist or is not readable
+
+1.copyAskosiWebApp.askosiwebappdestdir.notexist= Tomcat webapps dir does not exist or is not readable
+1.copyAskosiWebApp.askosiwebappdestdir=Path to copy the extracted files needed from askosiWebapp.zip:
+1.copyAskosiWebApp.askosiwebappdestdir.new=The extracted files needed from askosiWebapp.zip are going to be copied to or give new path:
+1.copyAskosiWebApp.ok=Askosi Web App extracted and copied ok
+1.copyAskosiWebApp.fail=Askosi Web App extracted and copied failed
+
+1.copyAskosiPlugJspui.dir=Directory where Jspui is deployed (e.g.:
+1.copyAskosiPlugJspui.ok=Askosi Plugin for Jspui extracted and copied ok
+1.copyAskosiPlugJspui.fail=Askosi Plugin for Jspui extracted and copied with fails
+
+1.copyAskosiDataDir=Directory of Askosi data:
+1.copyAskosiDataDir.ok=Creation of Askosi data directory ok
+1.copyAskosiDataDir.notexist= Directory does not exist, do you want to create it ([y]/n)?
+1.copyAskosiDataDir.failcreate=Unable to create data directory:
+1.copyAskosiDataDir.fail=Creation of Askosi data directory failed
+
+1.copyPackageZipFile.failcreate=Unable to create contents directory:
+1.copyPackageZipFile.extract=Extracting file:
+1.copyPackageZipFile.failcreate.dir=Unable to create directory:
+
+
 2=Beginning step 2: Create Auth Items
 2.fail=Failed to complete step 2.
+2.title=User authentication
+2.email.user=Email of the dspace user:
+2.password.user=Password of the dspace user:
+2.invalid.user=User not valid.
+
+2.createAuth.notschema=There is not schema
+2.createAuth.numelements=Number elements in schema
+2.createAuth.menu=DC elements as authorities collections (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit)
+2.createAuth.listauth=List all Authorities
+2.createAuth.listdc=List all DC elements
+2.createAuth.notmetadata=There are not metatata elements
+
+2.createElementAuth.dc.element=DC Element (type x to go former menu):
+2.createElementAuth.handle.community=Handle community or empty to create new:
+2.createElementAuth.handle.collection=Handle collection or empty to create new:
+2.createElementAuth.element.notexist= Element does not exist.
+2.createElementAuth.create=Now Items will be created in this community #?# and collection #?# from the Items of not authorites collections.\nItems will be created with type SKOS_AUTH. Proceed ([y]/n)?
+
+2.fillAuthItems.getitems=Getting items from collection:
+2.fillAuthItems.additem=Adding item with value:
+2.fillAuthItems.canceladd=Exists an authority with this value. Cancelling add operation.
+2.fillAuthItems.addmetadata=Adding metadata #?# , language: #?# , value: #?#
+2.fillAuthItems.item.mismatch=Item #?# with handle #?# mismatch #?#
+2.fillAuthItems.collection.item.noelement=Collection #?# item #?# has not element #?# , language: #?#
+
+2.askCommunity.handle=Handle of parent community or empty:
+2.askCommunity.name=Community name:
+2.askCommunity.noexist= Handle does not exist or is not a community.
+
+2.askCollection.handle=Handle of collection or empty:
+2.askCollection.name=Collection name:
+2.askCollection.notexist= Handle: does not exist or is not a collection.
+
 
 3=Beginning step 3: Configuring Dspace and Askosi
+
+3.configureAll.inputform.notexist= not exist or is not readable.
+3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
+
+3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
+3.configureInputFormsDspace.inpuforms.file.exists= File exists. Replace it ([y]/n)?
+
+3.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
+3.configureDspaceCfg.dspacecfg.file.exists= File exists. Replace it ([y]/n)?
+3.configureDspaceCfg.askosidatadir=Askosi data directory:
+3.configureDspaceCfg.element.incorrect= Element is not properly configured. The correct one is going to be added. Please remove the incorrect one.
+3.configureDspaceCfg.element.add.fail= Element failed to be added.
+3.configureDspaceCfg.element.add= Element added.
+3.configureDspaceCfg.nothing.add= Nothing added.
+
+3.readDspaceCfg.line.found.data=Found line: #?# with data dir #?#
+3.readDspaceCfg.line.found.content=Found line: #?# with content #?#
+3.readDspaceCfg.line.found=Found line:
+3.readDspaceCfg.line.found.element=Found line: #?# with element #?#
+
+3.checkAllSkosAuthElements.searching.elements=Searching auth elements in #?# collections.
+3.checkAllSkosAuthElements.searching.elements.collection=Searching auth elements in collection:
+3.checkAllSkosAuthElements.searching.elements.item=Searching auth elements in item:
+
+3.checkSkosAuthItem.elements=Elements:
+3.checkSkosAuthItem.element=Auth element:
