Configurar input-forms.xml

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -109,11 +109,11 @@
 
 3=Beginning step 3: Configuring Dspace and Askosi
 
-3.configureAll.inputform.notexist= not exist or is not readable.
+3.configureAll.inputforms.notexist= not exist or is not readable.
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 
 3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
-3.configureInputFormsDspace.inpuforms.file.exists= File exists. Replace it ([y]/n)?
+3.configureInputFormsDspace.inputforms.file.exists= File exists. Replace it ([y]/n)?
 
 3.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 3.configureDspaceCfg.dspacecfg.file.exists= File exists. Replace it ([y]/n)?
