--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -111,9 +111,18 @@
 
 3.configureAll.inputforms.notexist= not exist or is not readable.
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
+3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable:
 
 3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 3.configureInputFormsDspace.inputforms.file.exists= File exists. Replace it ([y]/n)?
+
+3.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
+3.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
+
+3.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" ar form "#?#" for new vocabulary "#?#" (y/[n])?
+
+3.addFieldForm.label=Label for element:
+3.addFieldForm.hint=Hint for element:
 
 3.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 3.configureDspaceCfg.dspacecfg.file.exists= File exists. Replace it ([y]/n)?
@@ -134,3 +143,5 @@
 
 3.checkSkosAuthItem.elements=Elements:
 3.checkSkosAuthItem.element=Auth element:
+
+3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
