Configurar EDMExport war

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,6 +1,6 @@
 0=Installation EDM
-0.steps=1,2,3
-0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi
+0.steps=1,2,3,4,5
+0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk
 0.error.commands=You must provide at least one command argument
 0.error.fail.init=Failure during filter init:
 0.error.dspace.dir=The DSpace installation directory is no defined!!
@@ -145,3 +145,15 @@
 3.checkSkosAuthItem.element=Auth element:
 
 3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
+
+
+4:Beginning step 4: Configuring EDMExport with your dspace.cfg
+4.checkEDMExporWar.notexists= war file does not exist is not a file or is not writeable
+4.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
+4.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
+4.configure.nopath=There is no <param-name>dspace-config</param-name> element
+4.configure.dspacecfg=Dspace configuration file "#?#" or enter a new one:
+
+
+5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
+
