--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -150,10 +150,30 @@
 4:Beginning step 4: Configuring EDMExport with your dspace.cfg
 4.checkEDMExporWar.notexists= war file does not exist is not a file or is not writeable
 4.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
+
 4.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
 4.configure.nopath=There is no <param-name>dspace-config</param-name> element
 4.configure.dspacecfg=Dspace configuration file "#?#" or enter a new one:
 
 
 5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
+5.checkEdmCrowssWalk.notexists= class file does not exist is not a file or is not writeable
+5.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
+
+5.checkOaiApiJar.notexists= jar file does not exist is not a file or is not writeable
+5.checkOaiApiJar.newjar=Introduce new jar file or intro fo finish.
+
+5.configure.exists.class=There is already a "#?#" in the "#?#" jar file. Continue (y/[n])?
+5.configure.edmcrosswalk.conf.begin=Beginning the configuration of the "#?#" to customize some parameters
+5.configure.edmcrosswalk.conf.edmrights=Url for the element edm.rights:
+5.configure.edmcrosswalk.conf.edmrights.new=There is a valur for edm.rights: "#?#", replace it with "#?#" (y/[n])?
+5.configure.edmcrosswalk.conf.edmtypes.exist=Actually exist the next types configured with their values:
+5.configure.edmcrosswalk.conf.edmtypes.type:Type #?#:
+5.configure.edmcrosswalk.conf.edmtypes.type.update=Which type do you want to change (press intro to finish)?
+5.configure.edmcrosswalk.conf.edmtypes.type.value.update=Values for types "#?#" separated by commas, actually: #?#
+5.configure.edmcrosswalk.conf.compile=Compiling the new class
+5.configure.edmcrosswalk.conf.updatejar=Updating jar file "#?#" with the new class
+5.configure.edmcrosswalk.conf.oaicat=Oai file properties to copy to work dir to add EDMCrosswalk, "#?#" or give another one:
+5.configure.edmcrosswalk.conf.ok=Configuring EDMCrosswalk finished successfully. Remember to copy the files on work to dspace environment:\n oaicat.properties to the dspace config dir\n #?# to the WEB-INF/lib dir of the oai deployed module.
+5.configure.edmcrosswalk.conf.nok=Error configuring EDMCrosswalk
 
