Trabajar con el EDMExport war en work

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -154,6 +154,8 @@
 4.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
 4.configure.nopath=There is no <param-name>dspace-config</param-name> element
 4.configure.dspacecfg=Dspace configuration file "#?#" or enter a new one:
+4.configure.dspacecfg.ok=Configuring EDMExport finished successfully. Remember to copy the file "#?#" to deploy it in you server.
+4.configure.dspacecfg.nok=Error configuring EDMExport
 
 
 5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
