Resultados de dspace.cfg e input-forms.xml a work

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -112,6 +112,7 @@
 3.configureAll.inputforms.notexist= not exist or is not readable.
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable:
+3.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
 
 3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 3.configureInputFormsDspace.inputforms.file.exists= File exists. Replace it ([y]/n)?
