Quitar showmessage junto con shoquestio de los pasos 3 4 y 5

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -109,47 +109,49 @@
 
 3=Beginning step 3: Configuring Dspace and Askosi
 
-3.configureAll.inputforms.notexist= not exist or is not readable.
+3.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
+  elements.
+3.configureAll.inputforms.notexist=#?# not exist or is not readable.
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
-3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable:
+3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
 3.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
 
 3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
-3.configureInputFormsDspace.inputforms.file.exists= File exists. Replace it ([y]/n)?
+3.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
 
 3.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
 3.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
 
 3.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" ar form "#?#" for new vocabulary "#?#" (y/[n])?
 
-3.addFieldForm.label=Label for element:
-3.addFieldForm.hint=Hint for element:
+3.addFieldForm.label=Label for element: #?#
+3.addFieldForm.hint=Hint for element: #?#
 
 3.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
-3.configureDspaceCfg.dspacecfg.file.exists= File exists. Replace it ([y]/n)?
-3.configureDspaceCfg.askosidatadir=Askosi data directory:
-3.configureDspaceCfg.element.incorrect= Element is not properly configured. The correct one is going to be added. Please remove the incorrect one.
-3.configureDspaceCfg.element.add.fail= Element failed to be added.
-3.configureDspaceCfg.element.add= Element added.
-3.configureDspaceCfg.nothing.add= Nothing added.
+3.configureDspaceCfg.dspacecfg.file.exists=#?# File exists. Replace it ([y]/n)?
+3.configureDspaceCfg.askosidatadir=Askosi data directory: #?#
+3.configureDspaceCfg.element.incorrect=#?# Element is not properly configured. The correct one is going to be added. Please remove the incorrect one.
+3.configureDspaceCfg.element.add.fail=#?# Element failed to be added.
+3.configureDspaceCfg.element.add=#?# Element added.
+3.configureDspaceCfg.nothing.add= No auth elements added to dspace.cfg.
 
 3.readDspaceCfg.line.found.data=Found line: #?# with data dir #?#
 3.readDspaceCfg.line.found.content=Found line: #?# with content #?#
-3.readDspaceCfg.line.found=Found line:
+3.readDspaceCfg.line.found=Found line: #?#
 3.readDspaceCfg.line.found.element=Found line: #?# with element #?#
 
 3.checkAllSkosAuthElements.searching.elements=Searching auth elements in #?# collections.
-3.checkAllSkosAuthElements.searching.elements.collection=Searching auth elements in collection:
-3.checkAllSkosAuthElements.searching.elements.item=Searching auth elements in item:
+3.checkAllSkosAuthElements.searching.elements.collection=Searching auth elements in collection: #?# with handle #?#
+3.checkAllSkosAuthElements.searching.elements.item=Searching auth elements in item: #?# with handle #?#
 
-3.checkSkosAuthItem.elements=Elements:
-3.checkSkosAuthItem.element=Auth element:
+3.checkSkosAuthItem.elements=Elements: #?#
+3.checkSkosAuthItem.element=Auth element: #?#
 
 3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
 
 
 4:Beginning step 4: Configuring EDMExport with your dspace.cfg
-4.checkEDMExporWar.notexists= war file does not exist is not a file or is not writeable
+4.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writeable
 4.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
 
 4.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
@@ -160,10 +162,10 @@
 
 
 5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
-5.checkEdmCrowssWalk.notexists= class file does not exist is not a file or is not writeable
+5.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writeable
 5.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
 
-5.checkOaiApiJar.notexists= jar file does not exist is not a file or is not writeable
+5.checkOaiApiJar.notexists=#?# jar file does not exist is not a file or is not writeable
 5.checkOaiApiJar.newjar=Introduce new jar file or intro fo finish.
 
 5.configure.exists.class=There is already a "#?#" in the "#?#" jar file. Continue (y/[n])?
