Anyadir summary a los pasos. Anyadir opcion de salir del menu principal. Anyadir preguntar para proceder a cada paso. Cambiar los file.separator por la propiedad fileSeparator.

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,19 +1,23 @@
 0=Installation EDM
-0.steps=1,2,3,4,5
-0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk
+0.steps=1,2,3,4,5,6
+0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk|6: Exit
 0.error.commands=You must provide at least one command argument
-0.error.fail.init=Failure during filter init:
+0.error.fail.init=Failure during filter init: #?#
 0.error.dspace.dir=The DSpace installation directory is no defined!!
 0.error.tomcat.base=The Tomcat Base directory is no defined!!
 0.shutdown.hook=MyShutdown hook called
 0.dspace_dir.option=DSpace installation directory
-0.help.option==Help
+0.help.option=Help
+0.language.option=Language to use
 0.terminal.option=Use lanterna library for display
 0.step.option=Go to this installation step
 0.tomcat_base.option=Tomcat Base directory
 0.verbose.option=Verbosity
 
 0.step.fail=Step not ok.
+
+0.proceed=¿Proceed ([y]/n)?
+0.option.step=Choose step:
 
 
 1=Beginning step 1: Installing Askosi
@@ -73,7 +77,7 @@
 
 2=Beginning step 2: Create Auth Items
 2.fail=Failed to complete step 2.
-2.title=User authentication
+2.title=Dspace User authentication
 2.email.user=Email of the dspace user:
 2.password.user=Password of the dspace user:
 2.invalid.user=User not valid.
@@ -104,13 +108,13 @@
 
 2.askCollection.handle=Handle of collection or empty:
 2.askCollection.name=Collection name:
-2.askCollection.notexist= Handle: does not exist or is not a collection.
+2.askCollection.notexist=#?# Handle does not exist or is not a collection.
 
 
 3=Beginning step 3: Configuring Dspace and Askosi
 
 3.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
-  elements.
+  elements. Go to step 2.
 3.configureAll.inputforms.notexist=#?# not exist or is not readable.
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
@@ -122,7 +126,7 @@
 3.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
 3.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
 
-3.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" ar form "#?#" for new vocabulary "#?#" (y/[n])?
+3.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" at form "#?#" for new vocabulary "#?#" (y/[n])?
 
 3.addFieldForm.label=Label for element: #?#
 3.addFieldForm.hint=Hint for element: #?#
@@ -171,7 +175,7 @@
 5.configure.exists.class=There is already a "#?#" in the "#?#" jar file. Continue (y/[n])?
 5.configure.edmcrosswalk.conf.begin=Beginning the configuration of the "#?#" to customize some parameters
 5.configure.edmcrosswalk.conf.edmrights=Url for the element edm.rights:
-5.configure.edmcrosswalk.conf.edmrights.new=There is a valur for edm.rights: "#?#", replace it with "#?#" (y/[n])?
+5.configure.edmcrosswalk.conf.edmrights.new=There is a value for edm.rights: "#?#", replace it with "#?#" (y/[n])?
 5.configure.edmcrosswalk.conf.edmtypes.exist=Actually exist the next types configured with their values:
 5.configure.edmcrosswalk.conf.edmtypes.type:Type #?#:
 5.configure.edmcrosswalk.conf.edmtypes.type.update=Which type do you want to change (press intro to finish)?
