Anyadir summaries para ingles

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -21,6 +21,8 @@
 
 
 1=Beginning step 1: Installing Askosi
+1.summary=Files will be checked on md5 hash and permissions from the installer packages dir\nJar files will be copied to servlet shared lib dir, they are required for Askosi\n\tE.g.: for Linux Debian: /var/lib/tomcat5.5/shared/lib/; for Linux RedHat: /usr/local/tomcat6/lib/; for OpenBSD: /var/tomcat/shared/lib/\nDatabase driver jar file will be copied from installer lib dir to servlet common lib dir.\n\tE.g.: for Linux Debian: /usr/share/tomcat5.5/common/lib/; for Linux RedHat: /usr/local/tomcat6/lib/; for OpenBSD: /var/tomcat/shared/lib/\naskosiWebapp.zip file will be extracted and copied from packages dir to servlet webapps dir.\nClasses from file classes.zip will be extracted and copied from packages dir to the dir where jspui is deployed, to install askosi plugin.\nFiles will be extracted and copied from exampleAskosiData.zip file from packages dir to Askosi data dir.
+
 1.ok=Askosi installed ok. Tomcat must be restarted after the end of the installation process.
 1.fail=Failed to complete step 1.
 
@@ -76,6 +78,8 @@
 
 
 2=Beginning step 2: Create Auth Items
+2.summary=As surely on this step, communities, collections and items will be created in dspace for the auth elements, an authentication with a dspace user is required.\nDc elements will be able to be selected to create sets of auth elements in dspace.\nCommunity and collection will be created/linked to these auth elements.\nNon auth collections will be traversed to look for unique values and added to auth items in their collections.\nAuth items will be created with type SKOS_AUTH.
+
 2.fail=Failed to complete step 2.
 2.title=Dspace User authentication
 2.email.user=Email of the dspace user:
@@ -112,6 +116,7 @@
 
 
 3=Beginning step 3: Configuring Dspace and Askosi
+3.summary=Askosi must be installed (step 2) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
 
 3.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
   elements. Go to step 2.
@@ -155,6 +160,8 @@
 
 
 4:Beginning step 4: Configuring EDMExport with your dspace.cfg
+4.summary=File "EDMExport.war" will be copied from packages dir to the work dir.\nDspace config file path will be asked.\nFile "EDMExport.war" will be modified because inside file "WEB-INF/web.xml" will be modified to change a parameter to add the new path to "dspace.cfg".
+
 4.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writeable
 4.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
 
@@ -166,6 +173,8 @@
 
 
 5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
+5.summary=File "EDMCrosswalk.java" will be copied from packages dir to the work dir.\nDspace oai api jar file will be copied from the dir where is deployed or the path will be asked to the work dir.\nValues will be asked for edm specific elements as edm.rights and edm.types.\nFile "EDMCrosswalk,java" will be modified with these new values.\nThis file will be compiled and added to the dspace oai api jar file.\nFile "oaicat.properties" will be copied from dspace config file to the work dir and a property will be added for edm and EDMCrosswalk.
+
 5.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writeable
 5.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
 
