--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -19,6 +19,14 @@
 0.proceed=¿Proceed ([y]/n)?
 0.option.step=Choose step:
 
+0.step.askosi=1
+0.step.auth_item=2
+0.step.conf_dspace_askosi=3
+0.step.edmexport=4
+0.step.edmcrosswalk=5
+0.step.exit=6
+
+
 
 1=Beginning step 1: Installing Askosi
 1.summary=Files will be checked on md5 hash and permissions from the installer packages dir\nJar files will be copied to servlet shared lib dir, they are required for Askosi\n\tE.g.: for Linux Debian: /var/lib/tomcat5.5/shared/lib/; for Linux RedHat: /usr/local/tomcat6/lib/; for OpenBSD: /var/tomcat/shared/lib/\nDatabase driver jar file will be copied from installer lib dir to servlet common lib dir.\n\tE.g.: for Linux Debian: /usr/share/tomcat5.5/common/lib/; for Linux RedHat: /usr/local/tomcat6/lib/; for OpenBSD: /var/tomcat/shared/lib/\naskosiWebapp.zip file will be extracted and copied from packages dir to servlet webapps dir.\nClasses from file classes.zip will be extracted and copied from packages dir to the dir where jspui is deployed, to install askosi plugin.\nFiles will be extracted and copied from exampleAskosiData.zip file from packages dir to Askosi data dir.
