--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,6 +1,6 @@
 0=Installation EDM
-0.steps=1,2,3,4,5,6
-0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk|6: Exit
+0.steps=1,2,3,4,5,6,7,8
+0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk|6: Configure EDMCrosswalk with xsl|7: Fill skos:about items with values of authorities|8: Exit
 0.error.commands=You must provide at least one command argument
 0.error.fail.init=Failure during filter init: #?#
 0.error.dspace.dir=The DSpace installation directory is no defined!!
@@ -24,7 +24,9 @@
 0.step.conf_dspace_askosi=3
 0.step.edmexport=4
 0.step.edmcrosswalk=5
-0.step.exit=6
+0.step.edmcrosswalkxsl=6
+0.step.fillitems=7
+0.step.exit=8
 
 
 
@@ -167,7 +169,7 @@
 3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
 
 
-4:Beginning step 4: Configuring EDMExport with your dspace.cfg
+4=Beginning step 4: Configuring EDMExport with your dspace.cfg
 4.summary=File "EDMExport.war" will be copied from packages dir to the work dir.\nDspace config file path will be asked.\nFile "EDMExport.war" will be modified because inside file "WEB-INF/web.xml" will be modified to change a parameter to add the new path to "dspace.cfg".
 
 4.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writeable
@@ -180,7 +182,7 @@
 4.configure.dspacecfg.nok=Error configuring EDMExport
 
 
-5:Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
+5=Beginning step 5: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
 5.summary=File "EDMCrosswalk.java" will be copied from packages dir to the work dir.\nDspace oai api jar file will be copied from the dir where is deployed or the path will be asked to the work dir.\nValues will be asked for edm specific elements as edm.rights and edm.types.\nFile "EDMCrosswalk,java" will be modified with these new values.\nThis file will be compiled and added to the dspace oai api jar file.\nFile "oaicat.properties" will be copied from dspace config file to the work dir and a property will be added for edm and EDMCrosswalk.
 
 5.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writeable
@@ -203,3 +205,7 @@
 5.configure.edmcrosswalk.conf.ok=Configuring EDMCrosswalk finished successfully. Remember to copy the files on work to dspace environment:\n oaicat.properties to the dspace config dir\n #?# to the WEB-INF/lib dir of the oai deployed module.
 5.configure.edmcrosswalk.conf.nok=Error configuring EDMCrosswalk
 
+
+7=Beginning step 7: Fill skos:about items with values of authorities.
+7.summary=The collections with authority items will be traversed to get the dc elements.\nThe collections with non authority items will be traversed to get the dc elements linked with the ones from the authorites.\nIf there is a match the authority handle will be stored in the authority field of the table metadatavalue of the database for the non auth item.
+7.configure.auth.num=Number of auth elements: #?#
